# nep-corpus

./: .gitignore  .pipeline_pid  ACTUAL_REPORT_20250425.md  ANSWERS_TO_FRIEND.md  CHANGES_SUMMARY.md  FINAL_REPORT.md  IMPROVEMENTS.md  IMPROVEMENTS_FOR_TOMORROW.md  NEPAL_AI_SCRAPER_PERFORMANCE_REPORT.md  PROJECTED_REPORT.md  PROJECT_SUMMARY.md  PULL_REQUEST.md  README.md  REAL_TEST_REPORT.md  generate_real_report.py  merge_config.yml  run_pipeline_file_only.py  run_with_logging.sh  test_improvements.py  test_real_data.py
docs/: BUG_FIXES.md
nepali_corpus/core/services/scrapers/: __init__.py  control.py  dao_scraper.py  enhanced_regulatory_scraper.py  gov_cdn_scraper.py  govt_scraper.py  metropolitan_scraper.py  miner.py  registry.py  (+1 more)
nepali_corpus/core/utils/: boilerplate.py  checkpoint.py  cleaning.py  dedup.py  enhanced_enrichment.py  enrichment.py  normalize.py  progress_tracker.py  rate_limiter.py
nepali_corpus/pipeline/: runner.py
rust/url_dedup/: Cargo.toml
rust/url_dedup/src/: lib.rs  lib1.rs
scripts/: compare_reports.py  corpus_cli.py  generate_report.py  merge_corpus_to_hf.py  start_services.sh  upload_to_hf.py
scripts/gov/: build_gov_discovery_seeds.py  gov_pdf_pipeline.py
scripts/merge_datasets/: __init__.py  kaggle_merge_to_hf.py  merge_config.yml  merge_corpus_to_hf.py  quality_filters.py  sample_quality.py  sft_merge_to_hf.py
sources/: devanagari_candidate_sources.jsonl  gov_discovery_registry.jsonl  govt_sources_registry.yaml  news_bulk_registry.jsonl  news_rss_registry.yaml  social_sources.yaml
tools/likhit/: ORIGIN.md
(+4 files in other folders)
