[package]
name = "rust_url_dedup"
version = "0.2.0"
edition = "2021"

[lib]
name = "rust_url_dedup"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38"] }
blake3 = "1.5.0"
scraper = "0.18.1"
aho-corasick = "1.1"
unicode-normalization = "0.1"
rayon = "1.10"
